test map update
added light and rock to the map

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,7 +112,7 @@ ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Environment
+ContentBrowserTab1.SelectedPaths=/Game/Characters
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -137,7 +137,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Maps/Map_01
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -554,6 +554,9 @@ Player_AnimBP_C.Default=True
 Player_AnimBP_C.RootMotion=True
 AnimGraphNode_StateMachine.GraphNodeDetail=True
 AnimGraphNode_StateMachine.Settings=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
 
 [PluginBrowser]
 InstalledPlugins=Substance
