--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -8,31 +8,38 @@ Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/AppleARKit/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+None=======
 
-<<<<<<< HEAD
-=======
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
+EnableTransport=True
+UnicastEndpoint=0.0.0.0:0
 UnicastEndpoint=0.0.0.0:0
 MulticastEndpoint=230.0.0.1:6666
+MulticastEndpoint=230.0.0.1:6666
+MulticastTimeToLive=1
 MulticastTimeToLive=1
 EnableTunnel=False
+EnableTunnel=False
 TunnelUnicastEndpoint=
+TunnelUnicastEndpoint=
+TunnelMulticastEndpoint=
 TunnelMulticastEndpoint=
 
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/Default.Default"',Map="/Engine/Maps/Templates/Template_Default")
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/VR-Basic.VR-Basic"',Map="/Engine/Maps/Templates/VR-Basic")
+TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/Default.Default"',Map="/Engine/Maps/Templates/Template_Default")
+TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/VR-Basic.VR-Basic"',Map="/Engine/Maps/Templates/VR-Basic")
+None=======
 
->>>>>>> f58c0ff44a03b8521b4b60bef041870de9ed550f
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
 NDKPath=(Path="")
 ANTPath=(Path="")
 JavaPath=(Path="")
+None=======
 
-<<<<<<< HEAD
-=======
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
 ToggleKeysHotkey=False
@@ -41,21 +48,4 @@ StickyKeysConfirmation=False
 ToggleKeysConfirmation=False
 FilterKeysConfirmation=False
 
-<<<<<<< HEAD
-[/Script/UdpMessaging.UdpMessagingSettings]
-EnableTransport=True
-UnicastEndpoint=0.0.0.0:0
-MulticastEndpoint=230.0.0.1:6666
-MulticastTimeToLive=1
-EnableTunnel=False
-TunnelUnicastEndpoint=
-TunnelMulticastEndpoint=
-
-[/Script/UnrealEd.UnrealEdEngine]
-TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/Default.Default"',Map="/Engine/Maps/Templates/Template_Default")
-TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/VR-Basic.VR-Basic"',Map="/Engine/Maps/Templates/VR-Basic")
-
-=======
->>>>>>> f58c0ff44a03b8521b4b60bef041870de9ed550f
->>>>>>> e2755df2c8610fb5dba584115d6a5164a96b092d
 
