--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -558,11 +558,17 @@ StaticMeshActor.Rendering=True
 StaticMeshActor.Tags=True
 StaticMeshActor.Cooking=True
 StaticMeshActor.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Environment/Landscape/Rocks/SM_HeroRock_03.SM_HeroRock_03;
 RecentlyPlaced=/Game/Environment/Landscape/Rocks/SM_Rock_09.SM_Rock_09;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2;
 
 [DetailPropertyExpansion]
@@ -1315,5 +1321,10 @@ ClothingSystemEditorInterface.TimeStamp=2018.05.02-09.49.57
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.05.02-09.50.00
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
 
