--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -387,15 +387,15 @@ UdpMessagingSettings.Transport=True
 UdpMessagingSettings.Tunnel=True
 WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
-BP_Light_V2_C.Default=True
-BP_Light_V2_C.Tick=True
-BP_Light_V2_C.Character=True
-BP_Light_V2_C.Camera=True
+BP_Light_V2_C.Default=False
+BP_Light_V2_C.Tick=False
+BP_Light_V2_C.Character=False
+BP_Light_V2_C.Camera=False
 BP_Light_V2_C.Pawn=True
-BP_Light_V2_C.Rendering=True
-BP_Light_V2_C.Replication=True
-BP_Light_V2_C.Input=True
-BP_Light_V2_C.Actor=True
+BP_Light_V2_C.Rendering=False
+BP_Light_V2_C.Replication=False
+BP_Light_V2_C.Input=False
+BP_Light_V2_C.Actor=False
 K2Node_InputAction.Input=True
 Map_01_C.Tick=True
 Map_01_C.Replication=True
@@ -403,12 +403,12 @@ Map_01_C.Input=True
 Map_01_C.Actor=True
 BP_Light_V2_C.Variable=True
 BP_Light_V2_C.Sockets=False
-BP_Light_V2_C.Character Movement: Jumping / Falling=True
+BP_Light_V2_C.Character Movement: Jumping / Falling=False
 BP_Light_V2_C.Character Movement (General Settings)=True
 BP_Light_V2_C.Character Movement: Walking=True
 BP_Light_V2_C.Character Movement: Swimming=False
 BP_Light_V2_C.Character Movement: Flying=False
-BP_Light_V2_C.Character Movement: Custom Movement=True
+BP_Light_V2_C.Character Movement: Custom Movement=False
 BP_Light_V2_C.Character Movement (Rotation Settings)=False
 BP_Light_V2_C.Character Movement (Networking)=False
 BP_Light_V2_C.Character Movement: Physics Interaction=False
@@ -652,20 +652,20 @@ REINST_BP_Light_V2_C_128.ComponentReplication=True
 REINST_BP_Light_V2_C_128.Activation=True
 REINST_BP_Light_V2_C_128.Cooking=True
 REINST_BP_Light_V2_C_128.Events=True
-CameraComponent.Variable=True
+CameraComponent.Variable=False
 CameraComponent.TransformCommon=True
-CameraComponent.Sockets=True
-CameraComponent.CameraSettings=True
-CameraComponent.Color Grading=True
-CameraComponent.Film=True
-CameraComponent.Mobile Tonemapper=True
-CameraComponent.Lens=True
-CameraComponent.Rendering Features=True
-CameraComponent.Tags=True
-CameraComponent.ComponentReplication=True
-CameraComponent.Activation=True
-CameraComponent.Cooking=True
-CameraComponent.Events=True
+CameraComponent.Sockets=False
+CameraComponent.CameraSettings=False
+CameraComponent.Color Grading=False
+CameraComponent.Film=False
+CameraComponent.Mobile Tonemapper=False
+CameraComponent.Lens=False
+CameraComponent.Rendering Features=False
+CameraComponent.Tags=False
+CameraComponent.ComponentReplication=False
+CameraComponent.Activation=False
+CameraComponent.Cooking=False
+CameraComponent.Events=False
 SpringArmComponent.Variable=True
 SpringArmComponent.TransformCommon=True
 SpringArmComponent.Sockets=True
@@ -673,12 +673,12 @@ SpringArmComponent.Camera=True
 SpringArmComponent.CameraCollision=True
 SpringArmComponent.CameraSettings=True
 SpringArmComponent.Lag=True
-SpringArmComponent.Rendering=True
-SpringArmComponent.Tags=True
-SpringArmComponent.ComponentReplication=True
-SpringArmComponent.Activation=True
-SpringArmComponent.Cooking=True
-SpringArmComponent.Events=True
+SpringArmComponent.Rendering=False
+SpringArmComponent.Tags=False
+SpringArmComponent.ComponentReplication=False
+SpringArmComponent.Activation=False
+SpringArmComponent.Cooking=False
+SpringArmComponent.Events=False
 ArrowComponent.Variable=True
 ArrowComponent.TransformCommon=True
 ArrowComponent.Sockets=True
@@ -708,6 +708,64 @@ AnimGraphNode_SaveCachedPose.CachedPose=True
 Brush.TransformCommon=True
 Brush.BrushSettings=True
 Brush.Actor=True
+SpringArmComponent.Physics=False
+SpringArmComponent.LOD=False
+SpringArmComponent.Collision=False
+REINST_BP_Light_V2_C_522.Variable=True
+REINST_BP_Light_V2_C_522.Sockets=True
+REINST_BP_Light_V2_C_522.Character Movement: Jumping / Falling=True
+REINST_BP_Light_V2_C_522.Character Movement (General Settings)=True
+REINST_BP_Light_V2_C_522.Character Movement: Walking=True
+REINST_BP_Light_V2_C_522.Character Movement: Swimming=True
+REINST_BP_Light_V2_C_522.Character Movement: Flying=True
+REINST_BP_Light_V2_C_522.Character Movement: Custom Movement=True
+REINST_BP_Light_V2_C_522.Character Movement (Rotation Settings)=True
+REINST_BP_Light_V2_C_522.Character Movement (Networking)=True
+REINST_BP_Light_V2_C_522.Character Movement: Physics Interaction=True
+REINST_BP_Light_V2_C_522.Character Movement=True
+REINST_BP_Light_V2_C_522.Character Movement: Avoidance=True
+REINST_BP_Light_V2_C_522.Character Movement: NavMesh Movement=True
+REINST_BP_Light_V2_C_522.RootMotion=True
+REINST_BP_Light_V2_C_522.NavMovement=True
+REINST_BP_Light_V2_C_522.Velocity=True
+REINST_BP_Light_V2_C_522.PlanarMovement=True
+REINST_BP_Light_V2_C_522.MovementComponent=True
+REINST_BP_Light_V2_C_522.Tags=True
+REINST_BP_Light_V2_C_522.ComponentReplication=True
+REINST_BP_Light_V2_C_522.Activation=True
+REINST_BP_Light_V2_C_522.Cooking=True
+REINST_BP_Light_V2_C_522.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+REINST_BP_Light_V2_C_581.None=True
+REINST_BP_Light_V2_C_581.Tick=True
+REINST_BP_Light_V2_C_581.Character=True
+REINST_BP_Light_V2_C_581.Camera=True
+REINST_BP_Light_V2_C_581.Pawn=True
+REINST_BP_Light_V2_C_581.Rendering=True
+REINST_BP_Light_V2_C_581.Replication=True
+REINST_BP_Light_V2_C_581.Input=True
+REINST_BP_Light_V2_C_581.Actor=True
+REINST_BP_Light_V2_C_595.None=True
+REINST_BP_Light_V2_C_595.Tick=True
+REINST_BP_Light_V2_C_595.Character=True
+REINST_BP_Light_V2_C_595.Camera=True
+REINST_BP_Light_V2_C_595.Pawn=True
+REINST_BP_Light_V2_C_595.Rendering=True
+REINST_BP_Light_V2_C_595.Replication=True
+REINST_BP_Light_V2_C_595.Input=True
+REINST_BP_Light_V2_C_595.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -740,8 +798,9 @@ LastLogListing=SourceControl
 /Game/Characters/Player/Meshes/Character_Skeleton.Character_Skeleton=1
 
 [DetailCategoriesAdvanced]
-BP_Light_V2_C.Character Movement (General Settings)=False
+BP_Light_V2_C.Character Movement (General Settings)=True
 BP_Light_V2_C.Animation=True
+CameraComponent.CameraSettings=True
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
