--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -766,6 +766,18 @@ REINST_BP_Light_V2_C_595.Rendering=True
 REINST_BP_Light_V2_C_595.Replication=True
 REINST_BP_Light_V2_C_595.Input=True
 REINST_BP_Light_V2_C_595.Actor=True
+Landscape.TransformCommon=True
+Landscape.LOD=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.Landscape=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Input=True
+Landscape.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
