--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -850,6 +850,15 @@ AmbientSound.Activation=True
 AmbientSound.Cooking=True
 AmbientSound.Rendering=True
 AmbientSound.Actor=True
+ChildActorComponent.Variable=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.Sockets=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Cooking=True
+ChildActorComponent.Events=True
 
 [AssetEditorManager]
 CleanShutdown=False
