--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -778,11 +778,94 @@ Landscape.Collision=True
 Landscape.HierarchicalLOD=True
 Landscape.Input=True
 Landscape.Actor=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+AnimMontage.Animation=True
+AnimMontage.BlendOption=True
+AnimMontage.SyncGroup=True
+AnimMontage.AdditiveSettings=True
+AnimMontage.TimeStretchCurve=True
+AnimMontage.MetaData=True
+AnimMontage.Thumbnail=True
+REINST_BP_Light_V2_C_803.TransformCommon=True
+REINST_BP_Light_V2_C_803.Animation=True
+REINST_BP_Light_V2_C_803.Mesh=True
+REINST_BP_Light_V2_C_803.Clothing=True
+REINST_BP_Light_V2_C_803.Physics=True
+REINST_BP_Light_V2_C_803.Collision=True
+REINST_BP_Light_V2_C_803.ClothingSimulation=True
+REINST_BP_Light_V2_C_803.Lighting=True
+REINST_BP_Light_V2_C_803.Rendering=True
+REINST_BP_Light_V2_C_803.Tags=True
+REINST_BP_Light_V2_C_803.Activation=True
+REINST_BP_Light_V2_C_803.Cooking=True
+REINST_BP_Light_V2_C_803.Character Movement: Jumping / Falling=True
+REINST_BP_Light_V2_C_803.Character Movement (General Settings)=True
+REINST_BP_Light_V2_C_803.Character Movement: Walking=True
+REINST_BP_Light_V2_C_803.Character Movement: Swimming=True
+REINST_BP_Light_V2_C_803.Character Movement: Flying=True
+REINST_BP_Light_V2_C_803.Character Movement: Custom Movement=True
+REINST_BP_Light_V2_C_803.Character Movement (Rotation Settings)=True
+REINST_BP_Light_V2_C_803.Character Movement: Physics Interaction=True
+REINST_BP_Light_V2_C_803.Character Movement (Networking)=True
+REINST_BP_Light_V2_C_803.Character Movement=True
+REINST_BP_Light_V2_C_803.Character Movement: Avoidance=True
+REINST_BP_Light_V2_C_803.Character Movement: NavMesh Movement=True
+REINST_BP_Light_V2_C_803.RootMotion=True
+REINST_BP_Light_V2_C_803.NavMovement=True
+REINST_BP_Light_V2_C_803.Velocity=True
+REINST_BP_Light_V2_C_803.PlanarMovement=True
+REINST_BP_Light_V2_C_803.MovementComponent=True
+REINST_BP_Light_V2_C_803.Shape=True
+REINST_BP_Light_V2_C_803.Navigation=True
+REINST_BP_Light_V2_C_803.Character=True
+REINST_BP_Light_V2_C_803.Camera=True
+REINST_BP_Light_V2_C_803.Pawn=True
+REINST_BP_Light_V2_C_803.Input=True
+REINST_BP_Light_V2_C_803.Actor=True
+REINST_BP_Light_V2_C_822.TransformCommon=True
+REINST_BP_Light_V2_C_822.Animation=True
+REINST_BP_Light_V2_C_822.Mesh=True
+REINST_BP_Light_V2_C_822.Clothing=True
+REINST_BP_Light_V2_C_822.Physics=True
+REINST_BP_Light_V2_C_822.Collision=True
+REINST_BP_Light_V2_C_822.ClothingSimulation=True
+REINST_BP_Light_V2_C_822.Lighting=True
+REINST_BP_Light_V2_C_822.Rendering=True
+REINST_BP_Light_V2_C_822.Tags=True
+REINST_BP_Light_V2_C_822.Activation=True
+REINST_BP_Light_V2_C_822.Cooking=True
+REINST_BP_Light_V2_C_822.Character Movement: Jumping / Falling=True
+REINST_BP_Light_V2_C_822.Character Movement (General Settings)=True
+REINST_BP_Light_V2_C_822.Character Movement: Walking=True
+REINST_BP_Light_V2_C_822.Character Movement: Swimming=True
+REINST_BP_Light_V2_C_822.Character Movement: Flying=True
+REINST_BP_Light_V2_C_822.Character Movement: Custom Movement=True
+REINST_BP_Light_V2_C_822.Character Movement (Rotation Settings)=True
+REINST_BP_Light_V2_C_822.Character Movement: Physics Interaction=True
+REINST_BP_Light_V2_C_822.Character Movement (Networking)=True
+REINST_BP_Light_V2_C_822.Character Movement=True
+REINST_BP_Light_V2_C_822.Character Movement: Avoidance=True
+REINST_BP_Light_V2_C_822.Character Movement: NavMesh Movement=True
+REINST_BP_Light_V2_C_822.RootMotion=True
+REINST_BP_Light_V2_C_822.NavMovement=True
+REINST_BP_Light_V2_C_822.Velocity=True
+REINST_BP_Light_V2_C_822.PlanarMovement=True
+REINST_BP_Light_V2_C_822.MovementComponent=True
+REINST_BP_Light_V2_C_822.Shape=True
+REINST_BP_Light_V2_C_822.Navigation=True
+REINST_BP_Light_V2_C_822.Character=True
+REINST_BP_Light_V2_C_822.Camera=True
+REINST_BP_Light_V2_C_822.Pawn=True
+REINST_BP_Light_V2_C_822.Input=True
+REINST_BP_Light_V2_C_822.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2
 OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/Player_AnimBP.Player_AnimBP
+OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2
+OpenAssetsAtExit=/Game/Characters/Player/Animations/Light/Montages/Combo_05_AM.Combo_05_AM
 
 [PlacementMode]
 RecentlyPlaced=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2;
@@ -800,7 +883,7 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[11]\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [MessageLog]
-LastLogListing=SourceControl
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2=1
@@ -1552,5 +1635,8 @@ ClothingSystemEditorInterface.TimeStamp=2018.06.29-08.43.16
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 AnimationBlueprintEditor.TimeStamp=2018.06.29-08.43.13
 AnimationBlueprintEditor.LastCompileMethod=Unknown
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=True
 
 
