--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowser]
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -105,7 +105,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Effects
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -113,9 +113,26 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab2.SourcesExpanded=False
+ContentBrowserTab2.Locked=False
+ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
+ContentBrowserTab2.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab2.HorizontalSplitter.SlotSize0=0.900000
+ContentBrowserTab2.HorizontalSplitter.SlotSize1=0.900000
+ContentBrowserTab2.ActiveTypeFilters=
+ContentBrowserTab2.EnabledTypeFilters=
+ContentBrowserTab2.ActiveFrontendFilters=
+ContentBrowserTab2.EnabledFrontendFilters=
+ContentBrowserTab2.SelectedPaths=/Game
+ContentBrowserTab2.Favorites.SelectedPaths=
+ContentBrowserTab2.CollectionsExpanded=True
+ContentBrowserTab2.SelectedCollections=
+ContentBrowserTab2.ExpandedCollections=
+ContentBrowserTab2.ThumbnailSizeScale=0.180000
+ContentBrowserTab2.CurrentViewType=1
 
 [Directories2]
-UNR=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
+UNR=../../../../../../Users/NTI/Desktop/GK_Rep/Content/Maps
 BRUSH=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 FBX=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 FBXAnim=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
@@ -703,5 +720,60 @@ SceneOutliner.TimeStamp=2018.06.05-12.49.55
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2018.06.05-12.49.52
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Actor=True
+ThirdPersonCharacter_C.TransformCommon=True
+ThirdPersonCharacter_C.Animation=True
+ThirdPersonCharacter_C.Mesh=True
+ThirdPersonCharacter_C.Clothing=True
+ThirdPersonCharacter_C.Physics=True
+ThirdPersonCharacter_C.Collision=True
+ThirdPersonCharacter_C.ClothingSimulation=True
+ThirdPersonCharacter_C.Lighting=True
+ThirdPersonCharacter_C.Rendering=True
+ThirdPersonCharacter_C.Tags=True
+ThirdPersonCharacter_C.Activation=True
+ThirdPersonCharacter_C.Cooking=True
+ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+ThirdPersonCharacter_C.Character Movement (General Settings)=True
+ThirdPersonCharacter_C.Character Movement: Walking=True
+ThirdPersonCharacter_C.Character Movement: Swimming=True
+ThirdPersonCharacter_C.Character Movement: Flying=True
+ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+ThirdPersonCharacter_C.Character Movement (Networking)=True
+ThirdPersonCharacter_C.Character Movement=True
+ThirdPersonCharacter_C.Character Movement: Avoidance=True
+ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+ThirdPersonCharacter_C.RootMotion=True
+ThirdPersonCharacter_C.NavMovement=True
+ThirdPersonCharacter_C.Velocity=True
+ThirdPersonCharacter_C.PlanarMovement=True
+ThirdPersonCharacter_C.MovementComponent=True
+ThirdPersonCharacter_C.Shape=True
+ThirdPersonCharacter_C.Navigation=True
+ThirdPersonCharacter_C.Character=True
+ThirdPersonCharacter_C.Camera=True
+ThirdPersonCharacter_C.Pawn=True
+ThirdPersonCharacter_C.Input=True
+ThirdPersonCharacter_C.Actor=True
+ThirdPersonCharacter_C.Materials=True
+
+[PluginBrowser]
+InstalledPlugins=Substance
+
+[MRU]
+MRUItem0=/Game/Maps/Map_01
 
 
