--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -8,45 +8,39 @@ Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/AppleARKit/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+None=======
 
-<<<<<<< HEAD
-=======
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKPath=(Path="")
+SDKPath=(Path="")
+NDKPath=(Path="")
 NDKPath=(Path="")
 ANTPath=(Path="")
+ANTPath=(Path="")
+JavaPath=(Path="")
 JavaPath=(Path="")
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
+EnableTransport=True
+UnicastEndpoint=0.0.0.0:0
 UnicastEndpoint=0.0.0.0:0
 MulticastEndpoint=230.0.0.1:6666
+MulticastEndpoint=230.0.0.1:6666
+MulticastTimeToLive=1
 MulticastTimeToLive=1
 EnableTunnel=False
+EnableTunnel=False
+TunnelUnicastEndpoint=
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
+TunnelMulticastEndpoint=
+None=======
 
->>>>>>> Light
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/Default.Default"',Map="/Engine/Maps/Templates/Template_Default")
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/VR-Basic.VR-Basic"',Map="/Engine/Maps/Templates/VR-Basic")
 
-<<<<<<< HEAD
-[/Script/AndroidPlatformEditor.AndroidSDKSettings]
-SDKPath=(Path="")
-NDKPath=(Path="")
-ANTPath=(Path="")
-JavaPath=(Path="")
-
-[/Script/UdpMessaging.UdpMessagingSettings]
-EnableTransport=True
-UnicastEndpoint=0.0.0.0:0
-MulticastEndpoint=230.0.0.1:6666
-MulticastTimeToLive=1
-EnableTunnel=False
-TunnelUnicastEndpoint=
-TunnelMulticastEndpoint=
-=======
 [WindowsApplication.Accessibility]
 StickyKeysHotkey=False
 ToggleKeysHotkey=False
@@ -54,6 +48,5 @@ FilterKeysHotkey=False
 StickyKeysConfirmation=False
 ToggleKeysConfirmation=False
 FilterKeysConfirmation=False
->>>>>>> Light
 
 
