--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 Content/Characters/Player/Blueprints/Light/BP_Light_V2.uasset
 Content/Characters/Player/Blueprints/Light/Player_AnimBP.uasset
+Saved/Logs/GK_Rep.log
