--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -46,7 +46,7 @@ PIEAlwaysOnTop=False
 StandaloneWindowPosition=(X=0,Y=0)
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -1596,7 +1596,7 @@ ParticleModuleSize.Size=True
 ParticleModuleSize.Cascade=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [PlacementMode]
@@ -1651,7 +1651,7 @@ ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distri
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Size.StartSize.Distribution.Object.Constant\" "
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=AssetReimport
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2=1
@@ -1741,7 +1741,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Light/Sequences
+ContentBrowserTab1.SelectedPaths=/Game/Characters
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1768,6 +1768,23 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+ContentBrowserTab2.SourcesExpanded=False
+ContentBrowserTab2.Locked=False
+ContentBrowserTab2.VerticalSplitter.SlotSize0=0.250000
+ContentBrowserTab2.VerticalSplitter.SlotSize1=0.750000
+ContentBrowserTab2.HorizontalSplitter.SlotSize0=0.900000
+ContentBrowserTab2.HorizontalSplitter.SlotSize1=0.900000
+ContentBrowserTab2.ActiveTypeFilters=
+ContentBrowserTab2.EnabledTypeFilters=
+ContentBrowserTab2.ActiveFrontendFilters=
+ContentBrowserTab2.EnabledFrontendFilters=
+ContentBrowserTab2.SelectedPaths=/Game
+ContentBrowserTab2.Favorites.SelectedPaths=
+ContentBrowserTab2.CollectionsExpanded=True
+ContentBrowserTab2.SelectedCollections=
+ContentBrowserTab2.ExpandedCollections=
+ContentBrowserTab2.ThumbnailSizeScale=0.180000
+ContentBrowserTab2.CurrentViewType=1
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1837,7 +1854,7 @@ InstalledPlugins=MirrorAnimationSystem
 InstalledPlugins=Substance
 
 [RootWindow]
-ScreenPosition=X=374.000 Y=317.000
+ScreenPosition=X=373.600 Y=316.800
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -2490,10 +2507,10 @@ ReferenceViewer.TimeStamp=2018.01.19-00.47.12
 ReferenceViewer.LastCompileMethod=Unknown
 SizeMap.TimeStamp=2018.01.19-00.47.16
 SizeMap.LastCompileMethod=Unknown
-MirrorAnimationSystem.TimeStamp=2018.07.17-12.24.36
-MirrorAnimationSystem.LastCompileMethod=Unknown
-MirrorAnimationSystemEditor.TimeStamp=2018.07.17-12.24.41
-MirrorAnimationSystemEditor.LastCompileMethod=Unknown
+MirrorAnimationSystem.TimeStamp=2018.07.18-12.34.47
+MirrorAnimationSystem.LastCompileMethod=External
+MirrorAnimationSystemEditor.TimeStamp=2018.07.18-12.34.52
+MirrorAnimationSystemEditor.LastCompileMethod=External
 Cascade.TimeStamp=2018.06.29-08.43.16
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2018.06.29-08.43.20
