--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -68,6 +68,7 @@ LastExecutedLaunchName=PC0F5A34
 LastExecutedPIEPreviewDevice=
 NewWindowWidth=1000
 NewWindowHeight=500
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -186,7 +187,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Light Attack,InputSettings.Bindings.ActionMappings.Heavy Attack,InputSettings.Bindings.ActionMappings.Dodge,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Range,
 SubstanceSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Sprint,InputSettings.Bindings.ActionMappings.Light Attack,InputSettings.Bindings.ActionMappings.Heavy Attack,InputSettings.Bindings.ActionMappings.Dodge,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.ActionMappings.Range,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-BlendSpace=BlendSpace.BlendSamples.GroupName,BlendSpace.Axis Settings.Horizontal Axis,
+BlendSpace=BlendSpace.BlendSamples.GroupName,BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Map_01
@@ -396,7 +397,7 @@ BP_Light_V2_C.Tick=False
 BP_Light_V2_C.Character=False
 BP_Light_V2_C.Camera=False
 BP_Light_V2_C.Pawn=False
-BP_Light_V2_C.Rendering=False
+BP_Light_V2_C.Rendering=True
 BP_Light_V2_C.Replication=False
 BP_Light_V2_C.Input=False
 BP_Light_V2_C.Actor=False
@@ -453,7 +454,7 @@ REINST_BP_Light_V2_C_62.ComponentReplication=True
 REINST_BP_Light_V2_C_62.Activation=True
 REINST_BP_Light_V2_C_62.Cooking=True
 REINST_BP_Light_V2_C_62.Events=True
-AnimSequence.Animation=False
+AnimSequence.Animation=True
 AnimSequence.AdditiveSettings=False
 AnimSequence.Compression=False
 AnimSequence.RootMotion=False
@@ -1594,10 +1595,22 @@ ParticleModuleSizeMultiplyLife.Size=True
 ParticleModuleSizeMultiplyLife.Cascade=True
 ParticleModuleSize.Size=True
 ParticleModuleSize.Cascade=True
+ThirdPersonCharacter_C.Default=True
+ThirdPersonCharacter_C.Tick=True
+ThirdPersonCharacter_C.Replication=True
+ThirdPersonCharacter_C.Variable=True
+ThirdPersonCharacter_C.Sockets=True
+ThirdPersonCharacter_C.ComponentReplication=True
+ThirdPersonCharacter_C.Events=True
+ThirdPerson_AnimBP_C.Default=True
+ThirdPerson_AnimBP_C.RootMotion=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Characters/Player/Animations/Light/Blendspace/Combat.Combat
+OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/Player_AnimBP.Player_AnimBP
+OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2
 
 [PlacementMode]
 RecentlyPlaced=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2;
@@ -1711,6 +1724,9 @@ LastLogListing=FBXImport
 /Game/Characters/Player/Animations/Light/Sequences/Ability_01_SQ_Mirrored10.Ability_01_SQ_Mirrored10=1
 /Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_Chicken/P_Proj_Chicken_Imp_Explo_01.P_Proj_Chicken_Imp_Explo_01=1
 /Game/Characters/Player/Animations/Light/Montages/Combo_01_AM.Combo_01_AM=1
+/Game/Mannequin/Animations/ThirdPerson_IdleRun_2D.ThirdPerson_IdleRun_2D=1
+/Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 
 [DetailCategoriesAdvanced]
 BP_Light_V2_C.Character Movement (General Settings)=True
@@ -1741,7 +1757,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Light/Sequences
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Light/Blendspace
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1837,7 +1853,7 @@ InstalledPlugins=MirrorAnimationSystem
 InstalledPlugins=Substance
 
 [RootWindow]
-ScreenPosition=X=374.000 Y=317.000
+ScreenPosition=X=374.000 Y=310.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
