--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1594,9 +1594,26 @@ ParticleModuleSizeMultiplyLife.Size=True
 ParticleModuleSizeMultiplyLife.Cascade=True
 ParticleModuleSize.Size=True
 ParticleModuleSize.Cascade=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [PlacementMode]
@@ -1651,7 +1668,7 @@ ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distri
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Size.StartSize.Distribution.Object.Constant\" "
 
 [MessageLog]
-LastLogListing=AssetReimport
+LastLogListing=LoadErrors
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2=1
@@ -1711,6 +1728,7 @@ LastLogListing=AssetReimport
 /Game/Characters/Player/Animations/Light/Sequences/Ability_01_SQ_Mirrored10.Ability_01_SQ_Mirrored10=1
 /Game/InfinityBladeEffects/Effects/FX_Monsters/FX_Monster_Chicken/P_Proj_Chicken_Imp_Explo_01.P_Proj_Chicken_Imp_Explo_01=1
 /Game/Characters/Player/Animations/Light/Montages/Combo_01_AM.Combo_01_AM=1
+/Game/Effects/Light/L_Range_Attack/M_Light_RA.M_Light_RA=1
 
 [DetailCategoriesAdvanced]
 BP_Light_V2_C.Character Movement (General Settings)=True
@@ -2552,5 +2570,12 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[MaterialEditor]
+PrimType=1
 
 
