--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1606,7 +1606,7 @@ ThirdPerson_AnimBP_C.Default=True
 ThirdPerson_AnimBP_C.RootMotion=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Characters/Player/Animations/Light/Blendspace/Combat.Combat
 OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/Player_AnimBP.Player_AnimBP
@@ -1623,7 +1623,7 @@ RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryB
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[11]\" "
