--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1613,7 +1613,7 @@ MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
 MaterialExpressionConstant3Vector.MaterialExpression=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [PlacementMode]
@@ -1759,7 +1759,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Characters
+ContentBrowserTab1.SelectedPaths=/Game/Effects/Light/L_Range_Attack
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2525,9 +2525,9 @@ ReferenceViewer.TimeStamp=2018.01.19-00.47.12
 ReferenceViewer.LastCompileMethod=Unknown
 SizeMap.TimeStamp=2018.01.19-00.47.16
 SizeMap.LastCompileMethod=Unknown
-MirrorAnimationSystem.TimeStamp=2018.07.18-12.34.47
+MirrorAnimationSystem.TimeStamp=2018.07.18-14.02.13
 MirrorAnimationSystem.LastCompileMethod=External
-MirrorAnimationSystemEditor.TimeStamp=2018.07.18-12.34.52
+MirrorAnimationSystemEditor.TimeStamp=2018.07.18-14.02.17
 MirrorAnimationSystemEditor.LastCompileMethod=External
 Cascade.TimeStamp=2018.06.29-08.43.16
 Cascade.LastCompileMethod=Unknown
