--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1604,14 +1604,25 @@ ThirdPersonCharacter_C.ComponentReplication=True
 ThirdPersonCharacter_C.Events=True
 ThirdPerson_AnimBP_C.Default=True
 ThirdPerson_AnimBP_C.RootMotion=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Characters/Player/Animations/Light/Blendspace/Combat.Combat
-OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/Player_AnimBP.Player_AnimBP
-OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2
-OpenAssetsAtExit=/Game/Effects/Light/L_Range_Attack/M_Light_RA.M_Light_RA
 
 [PlacementMode]
 RecentlyPlaced=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2;
@@ -1624,7 +1635,7 @@ RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryB
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+Object=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[11]\" "
@@ -1665,7 +1676,7 @@ ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distri
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Size.StartSize.Distribution.Object.Constant\" "
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2=1
@@ -1728,6 +1739,8 @@ LastLogListing=FBXImport
 /Game/Mannequin/Animations/ThirdPerson_IdleRun_2D.ThirdPerson_IdleRun_2D=1
 /Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/Characters/Player/Animations/Light/Blendspace/Combat.Combat=1
+/Game/Effects/Light/L_Range_Attack/M_Light_RA.M_Light_RA=1
 
 [DetailCategoriesAdvanced]
 BP_Light_V2_C.Character Movement (General Settings)=True
@@ -1758,11 +1771,9 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-<<<<<<< HEAD
 ContentBrowserTab1.SelectedPaths=/Game/Effects/Light/L_Range_Attack
-=======
 ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Light/Blendspace
->>>>>>> 7148796eb09c3e5073e980cdb2071e2c2cde2f14
+None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2511,17 +2522,15 @@ ReferenceViewer.TimeStamp=2018.01.19-00.47.12
 ReferenceViewer.LastCompileMethod=Unknown
 SizeMap.TimeStamp=2018.01.19-00.47.16
 SizeMap.LastCompileMethod=Unknown
-<<<<<<< HEAD
 MirrorAnimationSystem.TimeStamp=2018.07.18-14.02.13
-MirrorAnimationSystem.LastCompileMethod=External
-MirrorAnimationSystemEditor.TimeStamp=2018.07.18-14.02.17
-MirrorAnimationSystemEditor.LastCompileMethod=External
-=======
 MirrorAnimationSystem.TimeStamp=2018.07.17-12.24.36
+MirrorAnimationSystem.LastCompileMethod=External
 MirrorAnimationSystem.LastCompileMethod=Unknown
+MirrorAnimationSystemEditor.TimeStamp=2018.07.18-14.02.17
 MirrorAnimationSystemEditor.TimeStamp=2018.07.17-12.24.41
+MirrorAnimationSystemEditor.LastCompileMethod=External
 MirrorAnimationSystemEditor.LastCompileMethod=Unknown
->>>>>>> 7148796eb09c3e5073e980cdb2071e2c2cde2f14
+None=======
 Cascade.TimeStamp=2018.06.29-08.43.16
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2018.06.29-08.43.20
@@ -2563,5 +2572,12 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-44.999969 Y=-179.999969 R=0.000000
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+bShowMobileStats=False
+
+[MaterialEditor]
+PrimType=1
 
 
