--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1623,7 +1623,7 @@ MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=Tr
 MaterialExpressionMaterialFunctionCall.MaterialExpression=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/Player_AnimBP.Player_AnimBP
 
@@ -1775,7 +1775,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Light/Blendspace
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Light/Sequences
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1912,7 +1912,7 @@ UNR=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/Maps
 BRUSH=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 FBX=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 FBXAnim=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
-GenericImport=../../../../../../Users/NTI/Downloads/AN_CH_lightjog01_v1_OE_09.07.18.fbx
+GenericImport=../../../../../../Users/NTI/Downloads/AN_CH_lightrunlookDC01_v1_OE_18.07.18.fbx
 GenericExport=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 GenericOpen=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 GenericSave=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
