--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -33,7 +33,7 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
-NewWindowPosition=(X=455,Y=253)
+NewWindowPosition=(X=460,Y=309)
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -1630,12 +1630,8 @@ ParticleModuleRequired.Normals=True
 ParticleModuleRequired.Materials=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2
-OpenAssetsAtExit=/Game/Effects/Light_Ranged_Attack/ps_Light_RA_01.ps_Light_RA_01
-OpenAssetsAtExit=/Game/Characters/Player/Blueprints/Light/Player_AnimBP.Player_AnimBP
-OpenAssetsAtExit=/Game/Characters/Player/Animations/Light/Montages/Combo_05_AM.Combo_05_AM
 
 [PlacementMode]
 RecentlyPlaced=/Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2;
@@ -1683,13 +1679,13 @@ AnimGraphNode_BlendListBase=
 ParticleModuleLocation_Seeded="\"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocation="\"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartLocation\" \"Object.Location.StartLocation.Distribution\" "
-ParticleModule="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Size.StartSize.Distribution.Object.Constant\" "
+ParticleModule=
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Size.StartSize.Distribution.Object.Constant\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" \"Object.Size.StartSize.Distribution.Object.Constant\" "
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Player/Blueprints/Light/BP_Light_V2.BP_Light_V2=1
@@ -1717,7 +1713,7 @@ LastLogListing=FBXImport
 /Game/Characters/NPC/Blueprints/AI/BTDecorator_BlueprintBase_New.BTDecorator_BlueprintBase_New=1
 /Game/Characters/Player/Animations/Light/Sequences/Sprint_V3.Sprint_V3=0
 /Game/Characters/Player/Animations/Light/Sequences/Release_V2_SQ.Release_V2_SQ=0
-/Game/Characters/Player/Animations/Light/Montages/Release_V2_AM.Release_V2_AM=0
+/Game/Characters/Player/Animations/Light/Montages/Release_V2_AM.Release_V2_AM=1
 /Game/Characters/NPC/Blueprints/AI/AttackManager.AttackManager=1
 /Game/Characters/NPC/Blueprints/AI/MoveNearPlayer.MoveNearPlayer=1
 /Game/Characters/NPC/Blueprints/AI/BT_FindPlayer.BT_FindPlayer=1
@@ -1754,6 +1750,7 @@ LastLogListing=FBXImport
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/Characters/Player/Animations/Light/Blendspace/Combat.Combat=1
 /Game/Effects/Light/L_Range_Attack/M_Light_RA.M_Light_RA=1
+/Game/Effects/Light_Ranged_Attack/ps_Light_RA_01.ps_Light_RA_01=1
 
 [DetailCategoriesAdvanced]
 BP_Light_V2_C.Character Movement (General Settings)=True
@@ -1785,7 +1782,7 @@ ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
 ContentBrowserTab1.SelectedPaths=/Game/Effects/Light/L_Range_Attack
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Light/Blendspace
+ContentBrowserTab1.SelectedPaths=/Game/Effects/Lava
 None=======
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1882,7 +1879,7 @@ InstalledPlugins=MirrorAnimationSystem
 InstalledPlugins=Substance
 
 [RootWindow]
-ScreenPosition=X=374.000 Y=310.000
+ScreenPosition=X=373.600 Y=309.600
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1919,7 +1916,7 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 
 [Directories2]
-UNR=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/Maps
+UNR=../../../../../../Users/NTI/Dropbox/GK_Live/GitLocal/GK_18.07/Content/Maps
 BRUSH=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 FBX=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 FBXAnim=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
@@ -2536,18 +2533,22 @@ ReferenceViewer.LastCompileMethod=Unknown
 SizeMap.TimeStamp=2018.01.19-00.47.16
 SizeMap.LastCompileMethod=Unknown
 MirrorAnimationSystem.TimeStamp=2018.07.18-14.02.13
-MirrorAnimationSystem.TimeStamp=2018.07.17-12.24.36
+MirrorAnimationSystem.TimeStamp=2018.07.18-14.02.13
 MirrorAnimationSystem.LastCompileMethod=External
-MirrorAnimationSystem.LastCompileMethod=Unknown
+MirrorAnimationSystem.LastCompileMethod=External
 MirrorAnimationSystemEditor.TimeStamp=2018.07.18-14.02.17
-MirrorAnimationSystemEditor.TimeStamp=2018.07.17-12.24.41
+MirrorAnimationSystemEditor.TimeStamp=2018.07.18-14.02.17
 MirrorAnimationSystemEditor.LastCompileMethod=External
-MirrorAnimationSystemEditor.LastCompileMethod=Unknown
+MirrorAnimationSystemEditor.LastCompileMethod=External
 None=======
 Cascade.TimeStamp=2018.06.29-08.43.16
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2018.06.29-08.43.20
 DistCurveEditor.LastCompileMethod=Unknown
+PluginWarden.TimeStamp=2018.05.22-20.48.47
+PluginWarden.LastCompileMethod=Unknown
+PortalProxies.TimeStamp=2018.05.22-20.48.47
+PortalProxies.LastCompileMethod=Unknown
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=True
