--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1650,7 +1650,7 @@ SkeletalMesh.ImportSettings=True
 SkeletalMesh.Sampling=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [PlacementMode]
@@ -1806,7 +1806,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Player/Animations/Light/Sequences
+ContentBrowserTab1.SelectedPaths=/Game/Characters/Weapons/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1945,7 +1945,7 @@ UNR=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/Maps
 BRUSH=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 FBX=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 FBXAnim=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
-GenericImport=../../../../../../Users/NTI/Downloads/AN_CH_lightrunlookDC01_v1_OE_18.07.18.fbx
+GenericImport=../../../../../../Users/NTI/Downloads/LP_WPN_LightsSpear_v3_LT_09.03.18.fbx
 GenericExport=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 GenericOpen=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
 GenericSave=../../../../../../Users/NTI/Documents/GitHub/GK_Rep/Content/
@@ -2565,6 +2565,10 @@ Cascade.TimeStamp=2018.06.29-08.43.16
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2018.06.29-08.43.20
 DistCurveEditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2018.06.29-08.43.38
+StaticMeshEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2018.06.29-08.43.24
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=True
