--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2514,10 +2514,38 @@ REINST_BP_Law_C_57.Rendering=True
 REINST_BP_Law_C_57.Replication=True
 REINST_BP_Law_C_57.Input=True
 REINST_BP_Law_C_57.Actor=True
+REINST_BP_Law_C_65.None=True
+REINST_BP_Law_C_65.Tick=True
+REINST_BP_Law_C_65.Character=True
+REINST_BP_Law_C_65.Camera=True
+REINST_BP_Law_C_65.Pawn=True
+REINST_BP_Law_C_65.Rendering=True
+REINST_BP_Law_C_65.Replication=True
+REINST_BP_Law_C_65.Input=True
+REINST_BP_Law_C_65.Actor=True
+REINST_BP_Law_C_73.None=True
+REINST_BP_Law_C_73.Tick=True
+REINST_BP_Law_C_73.Character=True
+REINST_BP_Law_C_73.Camera=True
+REINST_BP_Law_C_73.Pawn=True
+REINST_BP_Law_C_73.Rendering=True
+REINST_BP_Law_C_73.Replication=True
+REINST_BP_Law_C_73.Input=True
+REINST_BP_Law_C_73.Actor=True
+REINST_BP_Law_C_81.None=True
+REINST_BP_Law_C_81.Tick=True
+REINST_BP_Law_C_81.Character=True
+REINST_BP_Law_C_81.Camera=True
+REINST_BP_Law_C_81.Pawn=True
+REINST_BP_Law_C_81.Rendering=True
+REINST_BP_Law_C_81.Replication=True
+REINST_BP_Law_C_81.Input=True
+REINST_BP_Law_C_81.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Characters/NPC/Law/Blueprints/BP_Law.BP_Law
 
 [PlacementMode]
 RecentlyPlaced=/Game/Characters/NPC/Law/Blueprints/BP_Law.BP_Law;
@@ -2541,7 +2569,7 @@ BlackboardData="\"Object.Blackboard\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BP_Law_C=
+BP_Law_C="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 Character="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 Pawn="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_BP_Law_C_64="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -2609,6 +2637,9 @@ REINST_BP_Law_C_411="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 REINST_BP_Law_C_423="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_BP_Law_C_261="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 REINST_BP_Law_C_57="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+REINST_BP_Law_C_65="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+REINST_BP_Law_C_73="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
+REINST_BP_Law_C_81="\"Object.Character.CapsuleComponent.Object.Tags.ComponentTags\" "
 
 [MessageLog]
 LastLogListing=FBXImport
